'fix:HALERA-84-fix z-index'

--- a/src/styles/Note.module.css
+++ b/src/styles/Note.module.css
@@ -8,9 +8,10 @@
     width: 100%;
     min-height: 250px;
     max-height: 500px;
-
+    z-index: -5;
     transition: 0.15s ease-in-out;
     @apply shadow-lg
+
 }
 
 .card:hover {
@@ -41,4 +42,5 @@
     @apply
     card-actions
     justify-between
+
 }
